Fix keywords alignment

--- a/css/components/main-page.css
+++ b/css/components/main-page.css
@@ -94,5 +94,5 @@ button,
 }
 
 .search {
-    align-items: start;
+    align-items: baseline;
 }
