--- a/css/components/tags.css
+++ b/css/components/tags.css
@@ -1,16 +1,18 @@
-.most-searched-keys, .most-searched-keys li {
+.most-searched-keys,
+.most-searched-keys li {
     margin: 0;
     padding: 0;
 }
 
 .most-searched-keys {
-    margin-top: 6px;
     gap: 12px;
     flex-wrap: wrap;
+    align-items: baseline;
 }
 
 .most-searched {
     flex-grow: 1;
     gap: 20px;
     padding-left: 20px;
+    align-items: baseline;
 }
